--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jest": "^24.0.23",
+    "react-test-renderer": "^16.12.0"
   }
 }
